--- a/index.html
+++ b/index.html
@@ -310,42 +310,55 @@ function togglePhone() {
           </div>
         </section>
 
-        <!-- PROJECTS 
-        <section id="projects" class="card anchor" style="margin-top:16px;">
-          <h2>Projects</h2>
-
-          <div class="role">
-            <h3>Hybrid Infrastructure Lab (On-Prem + Azure)</h3>
-            <p class="muted">
-              Enterprise-style lab simulating real-world operations: AD/DNS redundancy, DHCP, file services,
-              CA, backup, monitoring, and Azure integration testing.
-            </p>
-            <div class="tagrow">
-              <span class="tag">Windows Server</span>
-              <span class="tag">AD DS</span>
-              <span class="tag">DNS/DHCP</span>
-              <span class="tag">Veeam</span>
-              <span class="tag">Monitoring</span>
-              <span class="tag">Azure</span>
-            </div>
-            <p style="margin-top:10px;">
-              <a href="assets/lab-diagram.png" target="_blank" rel="noreferrer">Lab Diagram</a>
-              <span class="muted"> • </span>
-              <a href="assets/lab-notes.pdf" target="_blank" rel="noreferrer">Lab Notes (PDF)</a>
-            </p>
-          </div> -->
-
-          <div class="role">
-            <h3>Power BI Operational Dashboard (Sample)</h3>
-            <p class="muted">
-              Dashboards for SLA tracking, incident trends, and operational KPIs to support leadership decision-making.
-            </p>
-            <p style="margin-top:10px;">
-             <!-- <a href="assets/powerbi-samples.html" target="_blank" rel="noreferrer">Screenshots / Case Study</a>
-            </p> -->
-          </div>
-        </section>
-      </div>
+       <!-- PROJECTS -->
+<section id="projects" class="card anchor" style="margin-top:16px;">
+  <h2>Strategic Projects</h2>
+  <!-- CASE 1 -->
+  <div class="role">
+    <h3>ERP & Business Systems Transformation – CP Construplan Construção</h3>
+    <p class="muted">
+      Role: ERP & Business Systems Specialist | IT Project Manager
+    </p>
+    <ul>
+      <li>Led full implementation of Mega Sistemas ERP across financial and operational modules</li>
+      <li>Integrated Vespera commercial platform and Multidados CRM</li>
+      <li>Deployed Movdesk customer service system</li>
+      <li>Structured data integration between sales, finance, and operations</li>
+      <li>Improved customer lifecycle tracking and commercial visibility</li>
+    </ul>
+    <p><strong>Business Impact:</strong> Reduced manual processes, increased operational efficiency, and strengthened cross-department system integration.</p>
+  </div>
+  <!-- CASE 2 -->
+  <div class="role">
+    <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
+    <p class="muted">
+      Role: Infrastructure Architect
+    </p>
+    <ul>
+      <li>Designed dual physical host architecture with Veeam replication</li>
+      <li>Implemented Hyper-V virtualization for ERP and database environments</li>
+      <li>Built structured backup strategy with Azure offsite replication</li>
+      <li>Eliminated single points of failure through redundancy strategy</li>
+      <li>Created resilient environment supporting mission-critical business systems</li>
+    </ul>
+    <p><strong>Business Impact:</strong> Established business continuity framework, reduced downtime risk, and increased infrastructure reliability.</p>
+  </div>
+  <!-- CASE 3 -->
+  <div class="role">
+    <h3>Oracle Separation & Multi-ERP Integration Project</h3>
+    <p class="muted">
+      Role: ERP & Business Systems Specialist | IT Project Manager
+    </p>
+    <ul>
+      <li>Led separation of shared Oracle databases to improve scalability and governance</li>
+      <li>Implemented Mega ERP and RM Totvs (HR system)</li>
+      <li>Integrated commercial/sales systems with lead capture platforms</li>
+      <li>Managed cross-functional IT team during transformation phase</li>
+      <li>Improved system governance and data segregation strategy</li>
+    </ul>
+    <p><strong>Business Impact:</strong> Increased data governance, improved sales integration, and enhanced enterprise system scalability.</p>
+  </div>
+</section>
 
       <!-- RIGHT COLUMN -->
       <aside>
