--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ function togglePhone() {
     <section class="hero">
       <h1>Dulcionor Willian de Oliveira</h1>
       <p class="subtitle">
-        IT Project Manager | ERP Implementation & Cloud Infrastructure (Azure/M365) | IT Service Delivery (ITIL)
+        IT Project Manager | ERP & Business Systems Specialist | Cloud Infrastructure (Azure/M365) | IT Service Delivery (ITIL)
       </p>
 
       <div class="meta">
