--- a/index.html
+++ b/index.html
@@ -221,10 +221,11 @@ function togglePhone() {
       </p>
 
       <div class="meta">
-        <span class="chip">📍 Calgary, AB, Canada</span>
-        <span class="chip">🧩 20+ years in ERP & IT</span>
-        <span class="chip">🛡️ Governance • Documentation • Resilience</span>
-      </div>
+  <span class="chip">20+ Years Experience</span>
+  <span class="chip">ERP Implementation & Integration</span>
+  <span class="chip">Business Process Optimization</span>
+  <span class="chip">Infrastructure & Governance</span>
+</div>
 
       <div class="cta">
         <!-- Replace links below -->
