--- a/index.html
+++ b/index.html
@@ -245,13 +245,12 @@ function togglePhone() {
         <!-- ABOUT -->
         <section id="about" class="card anchor">
           <h2>About</h2>
-          <p class="muted">
-            Strategic IT Project Manager and Infrastructure Specialist with 20+ years of experience delivering ERP
-            implementations, cloud operations, and service governance improvements.
-            I translate business needs into technical execution, strengthening documentation (SOPs), improving
-            operational discipline, and increasing service reliability in hybrid environments.
-          </p>
-
+        <p class="muted">
+            Strategic ERP & Business Systems Specialist with 20+ years of experience leading
+            enterprise application implementations, infrastructure design, and cross-platform integration.
+            Experienced in aligning technology with business operations to improve efficiency,
+            data governance, and system reliability.
+        </p>
           <div class="kpi">
             <div class="box">
               <b>Service Delivery</b>
