--- a/index.html
+++ b/index.html
@@ -315,19 +315,25 @@ function togglePhone() {
   <h2>Strategic Projects</h2>
   <!-- CASE 1 -->
   <div class="role">
-    <h3>ERP & Business Systems Transformation – CP Construplan Construção</h3>
-    <p class="muted">
-      Role: ERP & Business Systems Specialist | IT Project Manager
-    </p>
-    <ul>
-      <li>Led full implementation of Mega Sistemas ERP across financial and operational modules</li>
-      <li>Integrated Vespera commercial platform and Multidados CRM</li>
-      <li>Deployed Movdesk customer service system</li>
-      <li>Structured data integration between sales, finance, and operations</li>
-      <li>Improved customer lifecycle tracking and commercial visibility</li>
-    </ul>
-    <p><strong>Business Impact:</strong> Reduced manual processes, increased operational efficiency, and strengthened cross-department system integration.</p>
-  </div>
+  <h3>ERP & Business Systems Transformation – CP Construplan Construção</h3>
+  <!-- IMAGEM DO CASE -->
+  <a href="case1.png" target="_blank">
+    <img src="case1.png"
+         alt="ERP Integration Architecture Diagram"
+         class="project-image">
+  </a>
+  <p class="muted">
+    Role: ERP & Business Systems Specialist | IT Project Manager
+  </p>  
+<ul>
+    <li>Led full implementation of Mega Sistemas ERP across financial and operational modules</li>
+    <li>Integrated Vespera commercial platform and Multidados CRM</li>
+    <li>Deployed Movdesk customer service system</li>
+    <li>Structured data integration between sales, finance, and operations</li>
+    <li>Improved customer lifecycle tracking and commercial visibility</li>
+  </ul>
+  <p><strong>Business Impact:</strong> Reduced manual processes, increased operational efficiency, and strengthened cross-department system integration.</p>
+</div>
   <!-- CASE 2 -->
   <div class="role">
     <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
