--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@ function togglePhone() {
   <div class="role">
   <h3>ERP & Business Systems Transformation – CP Construplan Construção</h3>
   <!-- IMAGEM DO CASE -->
-  <a href="case1.png" target="_blank">
-    <img src="case1.png"
+  <a href="case1.jpg" target="_blank">
+    <img src="case1.jpg"
          alt="ERP Integration Architecture Diagram"
          class="project-image">
   </a>
@@ -334,36 +334,49 @@ function togglePhone() {
   </ul>
   <p><strong>Business Impact:</strong> Reduced manual processes, increased operational efficiency, and strengthened cross-department system integration.</p>
 </div>
-  <!-- CASE 2 -->
   <div class="role">
-    <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
-    <p class="muted">
-      Role: Infrastructure Architect
-    </p>
-    <ul>
-      <li>Designed dual physical host architecture with Veeam replication</li>
-      <li>Implemented Hyper-V virtualization for ERP and database environments</li>
-      <li>Built structured backup strategy with Azure offsite replication</li>
-      <li>Eliminated single points of failure through redundancy strategy</li>
-      <li>Created resilient environment supporting mission-critical business systems</li>
-    </ul>
-    <p><strong>Business Impact:</strong> Established business continuity framework, reduced downtime risk, and increased infrastructure reliability.</p>
-  </div>
+  <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
+
+  <!-- CASE 2 IMAGE -->
+  <a href="case2.jpg" target="_blank">
+    <img src="case2.jpg"
+         alt="Hybrid Infrastructure and Backup Architecture Diagram"
+         class="project-image">
+  </a>
+  <p class="muted">
+    Role: Infrastructure Architect
+  </p>
+  <ul>
+    <li>Designed dual physical host architecture with Veeam replication</li>
+    <li>Implemented Hyper-V virtualization for ERP and database environments</li>
+    <li>Built structured backup strategy with Azure offsite replication</li>
+    <li>Eliminated single points of failure through redundancy strategy</li>
+    <li>Created resilient environment supporting mission-critical business systems</li>
+  </ul>
+  <p><strong>Business Impact:</strong> Established business continuity framework, reduced downtime risk, and increased infrastructure reliability.</p>
+</div>
   <!-- CASE 3 -->
   <div class="role">
-    <h3>Oracle Separation & Multi-ERP Integration Project</h3>
-    <p class="muted">
-      Role: ERP & Business Systems Specialist | IT Project Manager
-    </p>
-    <ul>
-      <li>Led separation of shared Oracle databases to improve scalability and governance</li>
-      <li>Implemented Mega ERP and RM Totvs (HR system)</li>
-      <li>Integrated commercial/sales systems with lead capture platforms</li>
-      <li>Managed cross-functional IT team during transformation phase</li>
-      <li>Improved system governance and data segregation strategy</li>
-    </ul>
-    <p><strong>Business Impact:</strong> Increased data governance, improved sales integration, and enhanced enterprise system scalability.</p>
-  </div>
+  <h3>Oracle Separation & Multi-ERP Integration Project</h3>
+
+  <!-- CASE 3 IMAGE -->
+  <a href="case3.jpg" target="_blank">
+    <img src="case3.jpg"
+         alt="Oracle Separation and Multi-ERP Integration Diagram"
+         class="project-image">
+  </a>
+  <p class="muted">
+    Role: ERP & Business Systems Specialist | IT Project Manager
+  </p>
+  <ul>
+    <li>Led separation of shared Oracle databases to improve scalability and governance</li>
+    <li>Implemented Mega ERP and RM Totvs (HR system)</li>
+    <li>Integrated commercial/sales systems with lead capture platforms</li>
+    <li>Managed cross-functional IT team during transformation phase</li>
+    <li>Improved system governance and data segregation strategy</li>
+  </ul>
+  <p><strong>Business Impact:</strong> Increased data governance, improved sales integration, and enhanced enterprise system scalability.</p>
+</div>
 </section>
 
       <!-- RIGHT COLUMN -->
