--- a/index.html
+++ b/index.html
@@ -314,14 +314,15 @@ function togglePhone() {
 <section id="projects" class="card anchor" style="margin-top:16px;">
   <h2>Strategic Projects</h2>
   <!-- CASE 1 -->
-  <div class="role">
-  <h3>ERP & Business Systems Transformation – CP Construplan Construção</h3>
-  <!-- IMAGEM DO CASE -->
-  <a href="case1.jpg" target="_blank">
-    <img src="case1.jpg"
-         alt="ERP Integration Architecture Diagram"
-         class="project-image">
-  </a>
+ <img src="case1.jpg"
+       alt="ERP & Business Systems Transformation – CP Construplan Construção"
+       class="project-image">
+  <!-- BOTÃO PARA ABRIR -->
+  <div style="margin-top:10px;">
+    <a href="case1.jpg" target="_blank" class="btn">
+      🔍 View Full Architecture
+    </a>
+  </div>>
   <p class="muted">
     Role: ERP & Business Systems Specialist | IT Project Manager
   </p>  
@@ -338,12 +339,18 @@ function togglePhone() {
   <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
 
   <!-- CASE 2 IMAGE -->
-  <a href="case2.jpg" target="_blank">
-    <img src="case2.jpg"
-         alt="Hybrid Infrastructure and Backup Architecture Diagram"
-         class="project-image">
-  </a>
-  <p class="muted">
+    <div class="role">
+  <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
+  <img src="case2.jpg"
+       alt="Hybrid Infrastructure Architecture"
+       class="project-image">
+  <!-- BOTÃO PARA ABRIR -->
+  <div style="margin-top:10px;">
+    <a href="case2.jpg" target="_blank" class="btn">
+      🔍 View Full Architecture
+    </a>
+  </div>
+    <p class="muted">
     Role: Infrastructure Architect
   </p>
   <ul>
@@ -357,14 +364,18 @@ function togglePhone() {
 </div>
   <!-- CASE 3 -->
   <div class="role">
-  <h3>Oracle Separation & Multi-ERP Integration Project</h3>
+  <h3>Data Base Oracle Separation & Multi-ERP Integration Project</h3>
 
   <!-- CASE 3 IMAGE -->
-  <a href="case3.jpg" target="_blank">
-    <img src="case3.jpg"
-         alt="Oracle Separation and Multi-ERP Integration Diagram"
-         class="project-image">
-  </a>
+   <img src="case3.jpg"
+       alt="Data Base Oracle Separation & Multi-ERP Integration Project"
+       class="project-image">
+  <!-- BOTÃO PARA ABRIR -->
+  <div style="margin-top:10px;">
+    <a href="case3.jpg" target="_blank" class="btn">
+      🔍 View Full Architecture
+    </a>
+  </div>
   <p class="muted">
     Role: ERP & Business Systems Specialist | IT Project Manager
   </p>
