--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@ function togglePhone() {
 <section id="projects" class="card anchor" style="margin-top:16px;">
   <h2>Strategic Projects</h2>
   <!-- CASE 1 -->
- <img src="case1.jpg"
+<!-- <img src="case1.jpg"
        alt="ERP & Business Systems Transformation – CP Construplan Construção"
-       class="project-image">
+       class="project-image">-->
   <!-- BOTÃO PARA ABRIR -->
   <div style="margin-top:10px;">
     <a href="case1.jpg" target="_blank" class="btn">
@@ -339,11 +339,11 @@ function togglePhone() {
   <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
 
   <!-- CASE 2 IMAGE -->
-    <div class="role">
+  <div class="role">
   <h3>Hybrid Infrastructure & Disaster Recovery Architecture – DWOTI</h3>
-  <img src="case2.jpg"
+  <!--<img src="case2.jpg"
        alt="Hybrid Infrastructure Architecture"
-       class="project-image">
+       class="project-image">-->
   <!-- BOTÃO PARA ABRIR -->
   <div style="margin-top:10px;">
     <a href="case2.jpg" target="_blank" class="btn">
@@ -365,11 +365,10 @@ function togglePhone() {
   <!-- CASE 3 -->
   <div class="role">
   <h3>Data Base Oracle Separation & Multi-ERP Integration Project</h3>
-
   <!-- CASE 3 IMAGE -->
-   <img src="case3.jpg"
+  <!-- <img src="case3.jpg"
        alt="Data Base Oracle Separation & Multi-ERP Integration Project"
-       class="project-image">
+       class="project-image">-->
   <!-- BOTÃO PARA ABRIR -->
   <div style="margin-top:10px;">
     <a href="case3.jpg" target="_blank" class="btn">
