--- a/index.html
+++ b/index.html
@@ -473,10 +473,16 @@
       </aside> </div>
 
     <p class="footer">
-     © <span id="year"></span> Dulcionor Willian de Oliveira • Built with GitHub Pages
+      © <span id="year"></span> Dulcionor Willian de Oliveira • Built with GitHub Pages
     </p>
-  </main>
 
+    <div style="text-align: center; margin-top: 15px; margin-bottom: 20px;">
+      <a href="https://hits.seeyoufarm.com">
+        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://dulcionorwillian.github.io&count_bg=%236EA8FE&title_bg=%230F1624&icon=&icon_color=%23E7EDF7&title=Visits&edge_flat=true" alt="Visitas">
+      </a>
+    </div>
+
+  </main>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
