--- a/index.html
+++ b/index.html
@@ -477,9 +477,7 @@
     </p>
 
     <div style="text-align: center; margin-top: 15px; margin-bottom: 20px;">
-      <a href="https://hits.seeyoufarm.com">
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://dulcionorwillian.github.io&count_bg=%236EA8FE&title_bg=%230F1624&icon=&icon_color=%23E7EDF7&title=Visits&edge_flat=true" alt="Visitas">
-      </a>
+        <img src="https://komarev.com/ghpvc/?username=dulcionorwillian-portfolio&label=Profile%20Views&color=6EA8FE&style=flat" alt="Visitas">
     </div>
 
   </main>
