--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     </p>
 
     <div style="text-align: center; margin-top: 15px; margin-bottom: 20px;">
-        <img src="https://api.visitorbadge.io/api/visitors?path=dulcionorwillian.github.io&label=VISITAS&labelColor=%230F1624&countColor=%236EA8FE&style=flat" alt="Profile Views">
+        <img src="https://api.visitorbadge.io/api/visitors?path=dulcionorwillian.github.io&label=Profile%20Views&labelColor=%230F1624&countColor=%236EA8FE&style=flat" alt="Profile Views">
     </div>
 
   </main>
